Avoid tabs wrapping on /all on mobile

--- a/app/styles/components/_channel.scss
+++ b/app/styles/components/_channel.scss
@@ -22,7 +22,12 @@
 
 .Channel-body {
 	flex: 1;
-	padding: 1.5rem 3rem 0;
+	padding: 1.5rem 1rem 0;
+
+	@media (min-width: $layout-s) {
+		padding-left: 3rem;
+		padding-right: 3rem;
+	}
 }
 
 .Channel-slug {
